[gd_scene load_steps=4 format=3 uid="uid://bkrias5g013hj"]

[ext_resource type="Texture2D" uid="uid://b6pd12q3f4hin" path="res://assets/sprites/whitetile.png" id="1_mi6dp"]
[ext_resource type="Script" uid="uid://dpvk0h452ynwx" path="res://scripts/button.gd" id="1_rhj8v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rhj8v"]
radius = 34.2345

[node name="Button" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_rhj8v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rhj8v")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.376471, 1, 1)
rotation = 0.785398
texture = ExtResource("1_mi6dp")

[node name="ButtonPrompt" type="Label" parent="."]
visible = false
offset_left = -44.0
offset_top = -34.0
offset_right = 46.0
offset_bottom = -11.0
text = "E / X button"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
